--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderCoffeeAct"></activity>
+        <activity android:name=".OrderCoffeeAct" />
+        <activity android:name=".AddCoffeeAct"></activity>
     </application>
 
 </manifest>
